--- a/library_http/build.gradle
+++ b/library_http/build.gradle
@@ -11,4 +11,20 @@ dependencies {
     implementation depK.core
     implementation depX.appcompat
     implementation depX.material
+    //第三方依赖库
+    // https://github.com/square/okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+    // https://github.com/JakeWharton/DiskLruCache
+    implementation 'com.jakewharton:disklrucache:2.0.2'
+
+    // https://github.com/ReactiveX/RxJava
+    // https://github.com/ReactiveX/RxAndroid
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // https://github.com/square/retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 }
