--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,7 @@ dependencyResolutionManagement {
 rootProject.name = "KennieHttp"
 
 //************************演示项目 目录************************
-include ':app_example'
+include ':app_http'
 
 //************************公共库 目录************************
 include ':library_http'
